Assert failure in anonymous attribute relations #103945

Closed
opened 2023-01-17 18:24:19 +01:00 by Hans Goudey · 6 comments
Member

generic_props_bug.blend

To reproduce, open file in a debug build.

The assert happens while building the anonymous attribute relations for the Deform_curve node group.

For that node tree there are two eval_relations:

  • {field_input = 2, geometry_input = 0}
  • {field_input = 2, geometry_input = 1}

When adding these to a VectorSet<AttributeReferenceKey> with add_new, there is a collision because the field_input values are the same.
AttributeReferenceKey doesn't contain the geometry_input value.

__pthread_kill_implementation@0x00007ffff72afe5c (Unknown Source:0)
raise@0x00007ffff725fa76 (Unknown Source:0)
abort@0x00007ffff72497fc (Unknown Source:0)
_BLI_assert_abort@0x000000000a6066a8 (/home/hans/blender-git/blender/source/blender/blenlib/intern/BLI_assert.c:46)
blender::VectorSet<blender::nodes::AttributeReferenceKey, blender::PythonProbingStrategy<1ul, false>, blender::DefaultHash<blender::nodes::AttributeReferenceKey>, blender::DefaultEquality<blender::nodes::AttributeReferenceKey>, blender::SimpleVectorSetSlot<blender::nodes::AttributeReferenceKey>, blender::GuardedAllocator>::add_new__impl<blender::nodes::AttributeReferenceKey const&>@0x0000000003a99a9e (/home/hans/blender-git/blender/source/blender/blenlib/BLI_vector_set.hh:683)
blender::VectorSet<blender::nodes::AttributeReferenceKey, blender::PythonProbingStrategy<1ul, false>, blender::DefaultHash<blender::nodes::AttributeReferenceKey>, blender::DefaultEquality<blender::nodes::AttributeReferenceKey>, blender::SimpleVectorSetSlot<blender::nodes::AttributeReferenceKey>, blender::GuardedAllocator>::add_new@0x0000000003a725b9 (/home/hans/blender-git/blender/source/blender/blenlib/BLI_vector_set.hh:269)
blender::nodes::GeometryNodesLazyFunctionGraphBuilder::build_attribute_references@0x0000000003a424e1 (/home/hans/blender-git/blender/source/blender/nodes/intern/geometry_nodes_lazy_function.cc:2253)
blender::nodes::GeometryNodesLazyFunctionGraphBuilder::build_attribute_propagation_sets@0x0000000003a408e1 (/home/hans/blender-git/blender/source/blender/nodes/intern/geometry_nodes_lazy_function.cc:2181)
blender::nodes::GeometryNodesLazyFunctionGraphBuilder::build@0x0000000003a22a1c (/home/hans/blender-git/blender/source/blender/nodes/intern/geometry_nodes_lazy_function.cc:1212)
blender::nodes::ensure_geometry_nodes_lazy_function_graph@0x00000000039f80fc (/home/hans/blender-git/blender/source/blender/nodes/intern/geometry_nodes_lazy_function.cc:2761)
blender::bke::node_tree_runtime::preprocess_geometry_node_tree_for_evaluation@0x0000000000ce5744 (/home/hans/blender-git/blender/source/blender/blenkernel/intern/node_runtime.cc:22)
operator()@0x0000000002ebd91d (/home/hans/blender-git/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1761)
std::__invoke_impl<void, blender::deg::DepsgraphNodeBuilder::build_nodetree(bNodeTree*)::<lambda(Depsgraph*)>&, Depsgraph*>(std::__invoke_other, struct {...} &)@0x0000000002ee775b (/usr/include/c++/12/bits/invoke.h:61)
std::__invoke_r<void, blender::deg::DepsgraphNodeBuilder::build_nodetree(bNodeTree*)::<lambda(Depsgraph*)>&, Depsgraph*>(struct {...} &)@0x0000000002ee1824 (/usr/include/c++/12/bits/invoke.h:111)
std::_Function_handler<void(Depsgraph*), blender::deg::DepsgraphNodeBuilder::build_nodetree(bNodeTree*)::<lambda(Depsgraph*)> >::_M_invoke(const std::_Any_data &, Depsgraph *&&)@0x0000000002ed905e (/usr/include/c++/12/bits/std_function.h:290)
std::function<void (Depsgraph*)>::operator()(Depsgraph*) const@0x0000000002e05e2b (/usr/include/c++/12/bits/std_function.h:591)
blender::deg::(anonymous namespace)::evaluate_node@0x0000000002e0040c (/home/hans/blender-git/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:101)
blender::deg::(anonymous namespace)::deg_task_run_func@0x0000000002e0083e (/home/hans/blender-git/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:118)
Task::operator()@0x000000000ac94399 (/home/hans/blender-git/blender/source/blender/blenlib/intern/task_pool.cc:164)
tbb::internal::function_task<Task>::execute@0x000000000ac98c13 (/home/hans/blender-git/lib/linux_x86_64_glibc_228/tbb/include/tbb/task.h:1059)
[generic_props_bug.blend](https://archive.blender.org/developer/F14159723/generic_props_bug.blend) To reproduce, open file in a debug build. The assert happens while building the anonymous attribute relations for the `Deform_curve` node group. For that node tree there are two `eval_relations`: - `{field_input = 2, geometry_input = 0}` - `{field_input = 2, geometry_input = 1}` When adding these to a `VectorSet<AttributeReferenceKey>` with `add_new`, there is a collision because the `field_input` values are the same. `AttributeReferenceKey` doesn't contain the `geometry_input` value. ``` __pthread_kill_implementation@0x00007ffff72afe5c (Unknown Source:0) raise@0x00007ffff725fa76 (Unknown Source:0) abort@0x00007ffff72497fc (Unknown Source:0) _BLI_assert_abort@0x000000000a6066a8 (/home/hans/blender-git/blender/source/blender/blenlib/intern/BLI_assert.c:46) blender::VectorSet<blender::nodes::AttributeReferenceKey, blender::PythonProbingStrategy<1ul, false>, blender::DefaultHash<blender::nodes::AttributeReferenceKey>, blender::DefaultEquality<blender::nodes::AttributeReferenceKey>, blender::SimpleVectorSetSlot<blender::nodes::AttributeReferenceKey>, blender::GuardedAllocator>::add_new__impl<blender::nodes::AttributeReferenceKey const&>@0x0000000003a99a9e (/home/hans/blender-git/blender/source/blender/blenlib/BLI_vector_set.hh:683) blender::VectorSet<blender::nodes::AttributeReferenceKey, blender::PythonProbingStrategy<1ul, false>, blender::DefaultHash<blender::nodes::AttributeReferenceKey>, blender::DefaultEquality<blender::nodes::AttributeReferenceKey>, blender::SimpleVectorSetSlot<blender::nodes::AttributeReferenceKey>, blender::GuardedAllocator>::add_new@0x0000000003a725b9 (/home/hans/blender-git/blender/source/blender/blenlib/BLI_vector_set.hh:269) blender::nodes::GeometryNodesLazyFunctionGraphBuilder::build_attribute_references@0x0000000003a424e1 (/home/hans/blender-git/blender/source/blender/nodes/intern/geometry_nodes_lazy_function.cc:2253) blender::nodes::GeometryNodesLazyFunctionGraphBuilder::build_attribute_propagation_sets@0x0000000003a408e1 (/home/hans/blender-git/blender/source/blender/nodes/intern/geometry_nodes_lazy_function.cc:2181) blender::nodes::GeometryNodesLazyFunctionGraphBuilder::build@0x0000000003a22a1c (/home/hans/blender-git/blender/source/blender/nodes/intern/geometry_nodes_lazy_function.cc:1212) blender::nodes::ensure_geometry_nodes_lazy_function_graph@0x00000000039f80fc (/home/hans/blender-git/blender/source/blender/nodes/intern/geometry_nodes_lazy_function.cc:2761) blender::bke::node_tree_runtime::preprocess_geometry_node_tree_for_evaluation@0x0000000000ce5744 (/home/hans/blender-git/blender/source/blender/blenkernel/intern/node_runtime.cc:22) operator()@0x0000000002ebd91d (/home/hans/blender-git/blender/source/blender/depsgraph/intern/builder/deg_builder_nodes.cc:1761) std::__invoke_impl<void, blender::deg::DepsgraphNodeBuilder::build_nodetree(bNodeTree*)::<lambda(Depsgraph*)>&, Depsgraph*>(std::__invoke_other, struct {...} &)@0x0000000002ee775b (/usr/include/c++/12/bits/invoke.h:61) std::__invoke_r<void, blender::deg::DepsgraphNodeBuilder::build_nodetree(bNodeTree*)::<lambda(Depsgraph*)>&, Depsgraph*>(struct {...} &)@0x0000000002ee1824 (/usr/include/c++/12/bits/invoke.h:111) std::_Function_handler<void(Depsgraph*), blender::deg::DepsgraphNodeBuilder::build_nodetree(bNodeTree*)::<lambda(Depsgraph*)> >::_M_invoke(const std::_Any_data &, Depsgraph *&&)@0x0000000002ed905e (/usr/include/c++/12/bits/std_function.h:290) std::function<void (Depsgraph*)>::operator()(Depsgraph*) const@0x0000000002e05e2b (/usr/include/c++/12/bits/std_function.h:591) blender::deg::(anonymous namespace)::evaluate_node@0x0000000002e0040c (/home/hans/blender-git/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:101) blender::deg::(anonymous namespace)::deg_task_run_func@0x0000000002e0083e (/home/hans/blender-git/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:118) Task::operator()@0x000000000ac94399 (/home/hans/blender-git/blender/source/blender/blenlib/intern/task_pool.cc:164) tbb::internal::function_task<Task>::execute@0x000000000ac98c13 (/home/hans/blender-git/lib/linux_x86_64_glibc_228/tbb/include/tbb/task.h:1059) ```
Author
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Author
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Author
Member

@JacquesLucke As far as I can tell add_new seems wrong here. But maybe there's a deeper issue.

@JacquesLucke As far as I can tell `add_new` seems wrong here. But maybe there's a deeper issue.
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 1d253b6652

This issue was referenced by 1d253b6652518a68731a5d8a5909c8b29174b894
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2023-01-17 18:41:32 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103945
No description provided.