Fix T103945: incorrect anonymous attribute references

The case where the same field group input is evaluated on
more than one geometry inputs was not handled correctly.